[metadata]
name = raft-cluster
version = 0.1.0
author = Muti-Kara
author_email = muti.kara@ug.bilkent.edu.tr
description = A Raft library for creating nodes for custom task and managing the cluster.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Muti-Kara/Raft

[options]
packages = find:
install_requires =
    pydantic
    fastapi
    uvicorn
    rpyc

[options.entry_points]
console_scripts =
    run-cluster-manager = raft.main:main

[options.package_data]
* = *.md

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,data